--- a/12h_expanding_window_validate.ipynb
+++ b/12h_expanding_window_validate.ipynb
@@ -83,14 +83,12 @@
     }
    ],
    "source": [
-    "# Sliding window parameters\n",
-    "training_window_hours = 365 * 24\n",
     "step_size_hours = 12\n",
     "\n",
     "# Load all data once (training window + validation period)\n",
-    "all_data_start = validation_start_date - timedelta(hours=training_window_hours)\n",
+    "all_data_start = validation_start_date - timedelta(days=365)\n",
     "all_data_end = validation_end_date  #  For testing, replace with the next line\n",
-    "# all_data_end = validation_start_date + timedelta(hours=12 * 10)  # Uncomment for testing\n",
+    "# all_data_end = validation_start_date + timedelta(hours=12 * 10) # Test just for first several iterations\n",
     "\n",
     "ts_all = research.load_ohlc_timeseries_range(\n",
     "    sym, \n",
