--- a/12h_sliding_window_validate.ipynb
+++ b/12h_sliding_window_validate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a2d12d68",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "7ad0a06b",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading BTCUSDT: 100%|██████████| 371/371 [00:20<00:00, 18.18day/s]"
+      "Loading BTCUSDT: 100%|██████████| 371/371 [00:20<00:00, 18.10day/s]"
      ]
     },
     {
@@ -82,14 +82,12 @@
     }
    ],
    "source": [
-    "# Sliding window parameters\n",
-    "training_window_hours = 365 * 24  # Train on 1 year of hourly data\n",
     "step_size_hours = 12  # Retrain every 12 hours (match time_interval)\n",
     "\n",
     "# Load all data once (training window + validation period)\n",
-    "all_data_start = validation_start_date - timedelta(hours=training_window_hours)\n",
-    "# all_data_end = validation_end_date  # Full validation period # For testing, replace with the next line\n",
-    "all_data_end = validation_start_date + timedelta(hours=12 * 10)\n",
+    "all_data_start = validation_start_date - timedelta(days=365)\n",
+    "all_data_end = validation_end_date  # For testing, replace with the next line\n",
+    "# all_data_end = validation_start_date + timedelta(hours=12 * 10) # Test just for first several iterations\n",
     "\n",
     "ts_all = research.load_ohlc_timeseries_range(\n",
     "    sym, \n",
@@ -113,22 +111,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training & Validating: 100%|██████████| 10/10 [01:04<00:00,  6.45s/iteration, date=2024-10-06, predictions=10]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "✓ Validation complete! Total iterations: 10, Predictions: 10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Training & Validating: 100%|██████████| 10/10 [01:07<00:00,  6.80s/iteration, date=2024-10-06, predictions=10]\n"
      ]
     }
    ],
@@ -163,7 +146,7 @@
     "while current_date < all_data_end:\n",
     "    iteration_count += 1\n",
     "    # Define training sliding window\n",
-    "    train_start = current_date - timedelta(hours=training_window_hours)\n",
+    "    train_start = current_date - timedelta(days=365)\n",
     "    train_end = current_date\n",
     "    \n",
     "    # Slice training data from pre-loaded timeseries\n",
@@ -203,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3e856ae1",
    "metadata": {},
    "outputs": [],
@@ -228,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "be246f4b",
    "metadata": {},
    "outputs": [
@@ -237,23 +220,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-fce7df19d2ab4414afd2f5aa48be2c23.vega-embed {\n",
+       "  #altair-viz-a6c7f69c6014425fa6685b65ca557611.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-fce7df19d2ab4414afd2f5aa48be2c23.vega-embed details,\n",
-       "  #altair-viz-fce7df19d2ab4414afd2f5aa48be2c23.vega-embed details summary {\n",
+       "  #altair-viz-a6c7f69c6014425fa6685b65ca557611.vega-embed details,\n",
+       "  #altair-viz-a6c7f69c6014425fa6685b65ca557611.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-fce7df19d2ab4414afd2f5aa48be2c23\"></div>\n",
+       "<div id=\"altair-viz-a6c7f69c6014425fa6685b65ca557611\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-fce7df19d2ab4414afd2f5aa48be2c23\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-fce7df19d2ab4414afd2f5aa48be2c23\");\n",
+       "    if (outputDiv.id !== \"altair-viz-a6c7f69c6014425fa6685b65ca557611\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-a6c7f69c6014425fa6685b65ca557611\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -301,14 +284,14 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-dd0c6f0cb5ecd95ee4c5a91a882b00ff\"}, \"mark\": {\"type\": \"line\", \"tooltip\": true}, \"encoding\": {\"x\": {\"field\": \"index\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"equity_curve\", \"type\": \"quantitative\"}}, \"height\": 400, \"params\": [{\"name\": \"param_1\", \"select\": {\"type\": \"interval\", \"encodings\": [\"x\", \"y\"]}, \"bind\": \"scales\"}], \"title\": \"Sliding Window Validation\", \"width\": 800, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.20.1.json\", \"datasets\": {\"data-dd0c6f0cb5ecd95ee4c5a91a882b00ff\": [{\"index\": 0, \"equity_curve\": 0.006153914026884984}, {\"index\": 1, \"equity_curve\": -0.04082094148630622}, {\"index\": 2, \"equity_curve\": -0.03484967759061836}, {\"index\": 3, \"equity_curve\": -0.043361317846117436}, {\"index\": 4, \"equity_curve\": -0.04154187102280549}, {\"index\": 5, \"equity_curve\": -0.04163737555852026}, {\"index\": 6, \"equity_curve\": -0.03024472084669446}, {\"index\": 7, \"equity_curve\": -0.020017658998702996}, {\"index\": 8, \"equity_curve\": -0.021542576063858985}, {\"index\": 9, \"equity_curve\": -0.01951313560543756}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-f4196d2a9d19093eedfca03db8b2a102\"}, \"mark\": {\"type\": \"line\", \"tooltip\": true}, \"encoding\": {\"x\": {\"field\": \"index\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"equity_curve\", \"type\": \"quantitative\"}}, \"height\": 400, \"params\": [{\"name\": \"param_1\", \"select\": {\"type\": \"interval\", \"encodings\": [\"x\", \"y\"]}, \"bind\": \"scales\"}], \"title\": \"Sliding Window Validation\", \"width\": 800, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.20.1.json\", \"datasets\": {\"data-f4196d2a9d19093eedfca03db8b2a102\": [{\"index\": 0, \"equity_curve\": 0.006153914026884984}, {\"index\": 1, \"equity_curve\": -0.04082094148630622}, {\"index\": 2, \"equity_curve\": -0.03484967759061836}, {\"index\": 3, \"equity_curve\": -0.043361317846117436}, {\"index\": 4, \"equity_curve\": -0.04154187102280549}, {\"index\": 5, \"equity_curve\": -0.04163737555852026}, {\"index\": 6, \"equity_curve\": -0.03024472084669446}, {\"index\": 7, \"equity_curve\": -0.020017658998702996}, {\"index\": 8, \"equity_curve\": -0.021542576063858985}, {\"index\": 9, \"equity_curve\": -0.02357201652228041}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
